removed dark mode, fixed footer

--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,12 @@
 @import "tailwindcss/utilities";
 
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
+#root {
+  display: flex;
+  flex-direction: column;
 
-
-
-
+  min-height: 100vh;
+}
 *,
 body {
   margin: 0;
@@ -16,8 +18,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-nav{
-  padding-top:0 !important
+nav {
+  padding-top: 0 !important;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -85,7 +87,6 @@ code {
   flex-wrap: wrap;
   margin: auto;
   padding: 9rem 4rem;
-
 }
 .column {
   display: flex;
@@ -150,6 +151,10 @@ code {
   height: 25%;
   padding: 3px;
 }
+.w-90-l-6 {
+  left: 6%;
+  width: 90%;
+}
 .cursor {
   cursor: pointer;
 }
@@ -176,32 +181,33 @@ code {
   height: 5rem;
   margin: auto;
 }
-.library-container{
+.library-container {
   width: 80%;
-    margin: auto;
-    flex-wrap: wrap;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    gap: 20px;
-    flex-direction: column;
+  margin: auto;
+  flex-wrap: wrap;
+
+  display: flex;
+  position: relative;
+  justify-content: center;
+  gap: 20px;
+  flex-direction: column;
 }
-.lib-title{
+.lib-title {
   padding-bottom: 10px;
   font-size: 3em;
 }
-.lib-inner-container{
+.lib-inner-container {
   display: flex;
-    gap: 25px;
-    flex-direction: column;
+  gap: 25px;
+  flex-direction: column;
 }
-.lib-books-container{
+.lib-books-container {
   display: flex;
   flex-direction: row;
-  gap: 25px;
+  gap: 45px;
   flex-wrap: wrap;
 }
-.drop-position{
+.drop-position {
   left: 40px;
-    top: -181px;
+  top: -181px;
 }
